Ensure footer line is not too long

--- a/app/styles/components/footer.scss
+++ b/app/styles/components/footer.scss
@@ -101,6 +101,7 @@ footer {
 		> lower {
 
 			display:flex;
+			max-width:500px;
 			align-items:center;
 			flex-direction:row;
 			padding:0 0 100px 0;
